--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 	<p> Here is a map of some of the most haunted cities in the United States. </p>
 
+	<p> <a href="https://www.cntraveler.com/gallery/the-most-haunted-places-in-america">Compiled from this list.</a>.
+
  </article>
 
 <script src="scripts/places.js"></script>
