--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<p> Here is a map of some of the most haunted cities in the United States. </p>
 
-	<p> <a href="https://www.cntraveler.com/gallery/the-most-haunted-places-in-america">Compiled from this list.</a>.
+	<p> <a href="https://www.cntraveler.com/gallery/the-most-haunted-places-in-america">Compiled from this list</a>.
 
  </article>
 
